grafiken angepasst für latex

--- a/diskret.qmd
+++ b/diskret.qmd
@@ -638,6 +638,8 @@ In der Praxis kann diese Annäherung für $n\geq 30$ und $p\leq 0.1$ verwendet w
 
 ```{r}
 #| label: binomialpoisson
+#| fig-width: 7
+#| fig-height: 5
 par(mar=c(3.5, 3.5, 2, 1), 
     mgp=c(2.2, 0.6, 0), 
     las=1)
@@ -655,7 +657,7 @@ points(x, dbinom(x, size=30, prob=0.17), type="p", pch=16, col="hotpink")
 points(x, dbinom(x, size=1000, prob=0.005), type="p", pch=16, col="yellow3")
 abline(h=0, col="gray")
 legend("topright", 
-       c("P(5)", "B(10,0.5)", "B(30,0.17)", "B(1000,0.005)"), 
+       c("P(5)", "B(10, 0.5)", "B(30, 0.17)", "B(1000, 0.005)"), 
        lty=c(1,NA,NA,NA), 
        pch=c(NA,16,16,16), col=c("steelblue", 
                                  "darkgreen", 
