--- a/schaetzen.qmd
+++ b/schaetzen.qmd
@@ -48,6 +48,7 @@ Die möglichen Werte dieser $n$-dimensionalen Zufallsvariablen entsprechen allen
 
 ```{r}
 #| engine: tikz
+#| label: zufallsstichproben
 \begin{tikzpicture}
 \tikzstyle{node} = [align=center, node distance=1cm, text=blue]; 
 \tikzstyle{arrow} = [-latex, blue, line width=2pt];
@@ -295,6 +296,8 @@ $$
 
 ```{r}
 #| label: anzahlkinder3
+#| fig-width: 6
+#| fig-height: 5
 par(cex.lab=1, 
     mar=c(3,3,3,1),
     mgp=c(2,0.5,0))
@@ -931,8 +934,8 @@ Typische Konfidenzniveaus in der Praxis:
 
 $$
 \begin{aligned}
-1-\alpha &= 0.90 \quad (\alpha=0.10) \
-1-\alpha &= 0.95 \quad (\alpha=0.05) \quad \text{(am häufigsten verwendet)} \
+1-\alpha &= 0.90 \quad (\alpha=0.10) \\
+1-\alpha &= 0.95 \quad (\alpha=0.05) \quad \text{(am häufigsten verwendet)} \\
 1-\alpha &= 0.99 \quad (\alpha=0.01) \quad \text{(für kritische Anwendungen)}
 \end{aligned}
 $$
@@ -1043,9 +1046,11 @@ In der Praxis geht man typischerweise wie folgt vor:
 
 ```{r}
 #| label: intervallbereiche1
+#| fig-width: 5
+#| fig-height: 4
 x = seq(-3.48, 3.49, by=0.05)
 y = dnorm(x,mean=0,sd=1)
-par(cex.lab=1.2)
+par(cex.lab=1.1)
 plot(x, y, 
      xlab=expression(italic(X)), 
      ylab=expression(paste("Dichtefunktion ",italic(f(x)))), 
@@ -1123,9 +1128,11 @@ Da die Standardnormalverteilung symmetrisch um $0$ ist, wählt man am besten ent
 
 ```{r}
 #| label: intervallbereiche2
+#| fig-width: 5
+#| fig-height: 4
 x = seq(-3.48, 3.49, by=0.05)
 y = dnorm(x,mean=0,sd=1)
-par(cex.lab=1.2)
+par(cex.lab=1.1)
 plot(x, y, 
      xlab=expression(italic(Z)), 
      ylab=expression(paste("Dichtefunktion ",italic(f(x)))), 
@@ -1470,11 +1477,12 @@ Da die Chi-Quadrat-Verteilung nicht symmetrisch ist, werden die Quantile $\chi^{
 
 ```{r}
 #| label: chi2grenzen1
-
+#| fig-width: 6
+#| fig-height: 4
 x = seq(0, 30, length = 100)
 y = dchisq(x, df = 9)
 
-par(cex.lab = 1.2)
+par(cex.lab = 1.1)
 
 plot(x, y, 
      xlim = c(0, 30), 
@@ -1996,15 +2004,17 @@ Da die F-Verteilung nicht symmetrisch ist, werden zwei kritische Werte $f^{n_2-1
 
 ```{r}
 #| label: varianzunterschied
+#| fig-width: 6
+#| fig-height: 4
 x = seq(0, 5, length = 150)
 y = df(x, df1 = 12, df2 = 10)
 
-par(cex.lab = 1.2)
+par(cex.lab = 1.1)
 plot(x, y, 
      type = "l", 
      xlab = expression(F), 
      ylab = expression(paste("Dichtefunktion ", italic(f(x)))), 
-     main = expression(paste("Verteilung ", F, group("(", paste(n[1]-1, ",", n[2]-1), ")"))), 
+     main = expression(paste("Verteilung ", F, group("(", paste(n[1]-1, ", ", n[2]-1), ")"))), 
      xaxt = "n", yaxt = "n")
 abline(h = 0, col = "gray")
 
