--- a/stichprobenstatistik.qmd
+++ b/stichprobenstatistik.qmd
@@ -249,6 +249,8 @@ Prozentwerte $F_i$, aus denen ein Summenpolygon  angefertigt wird. Zusätzlich z
 
 ```{r}
 #| label: mediangrafisch1
+#| fig-width: 6
+#| fig-height: 6
 x <- seq(160, 200, 10)
 y <- c(0.07, 0.34, 0.7, 0.97, 1)*100
 plot(x, y, 
@@ -705,6 +707,7 @@ Das Boxplot erfreut sich großer Beliebtheit, da es mehrere Funktionen erfüllt:
 
 ```{r}
 #| label: boxplots1
+#| fig-width: 8
 data <- read.table("data/newborn_weights.csv", 
                    header=TRUE, 
                    sep=" ", 
@@ -1470,11 +1473,11 @@ Das Aufteilen der Stichprobe "Körpergrößen" nach der Variable "Geschlecht" er
 $$
 \begin{array}{lll}
 \hline
-{Frauen} &
+\textit{Frauen} &
 173, 158, 174, 166, 162, 177, 165, 154, 166, 182, \\
 & 169, 172, 170, 168. \\
 \hline
-{Männer} &
+\textit{Männer} &
 179, 181, 172, 194, 185, 187, 198, 178, 188, 171,\\
 & 175, 167, 186, 172, 176, 187. \\
 \hline
@@ -1489,6 +1492,8 @@ $$
 
 ```{r}
 #| label: factorHistogram
+#| fig-height: 5
+#| fig-width: 5
 data <- read.table("data/height_weight_data.csv", 
                    header=TRUE, 
                    sep="\t", 
@@ -1512,6 +1517,8 @@ barplot(out$right, col="salmon", horiz=TRUE, space=0, add=TRUE, axes=FALSE)
 
 ```{r}
 #| label: factorBoxplot
+#| fig-height: 5
+#| fig-width: 5
 data <- read.table("data/height_weight_data.csv", 
                    header=TRUE, 
                    sep="\t", 
