--- a/wahrscheinlichkeit.qmd
+++ b/wahrscheinlichkeit.qmd
@@ -1839,12 +1839,13 @@ Daher gilt:
 
 ```{r}
 #| label: likelihoodRatio
-
+#| fig-width: 8
+#| fig-height: 5
 pe=seq(0,1, 0.01)
 lr=c(0.01, 0.05, 0.1, 0.2, 0.5, 2, 5, 10, 20, 100)
 color=hcl(h=seq(0,240,24),
           c=80,l=60)
-par(mar=c(3.8, 3.8, 3, 11),
+par(mar=c(3.8, 3.8, 3, 12),
     mgp=c(1.8, 0.4, 0), 
     cex.lab=1, cex.axis=0.8, 
     las=1, 
