--- a/stichprobenstatistik.qmd
+++ b/stichprobenstatistik.qmd
@@ -1,5 +1,10 @@
 ---
 title: Stichprobenstatistik
+format:
+  html:
+    include-in-header: 
+      text: |
+        <img src="https://vg08.met.vgwort.de/na/ddff99b0d50b4599871ba688d503781b" width="1" height="1" alt="">
 ---
 
 Die deskriptive Statistik hat zum Ziel, empirische Daten durch Tabellen und
@@ -266,10 +271,10 @@ axis(2, at = seq(0, 100, 10),
      las=2)
 
 # blaue Hilfslinien
-lines(c(170, 170), c(0, 34),  col="skyblue", lty=3)
-lines(c(0, 170),   c(34, 34), col="skyblue", lty=3)
-lines(c(180, 180), c(0, 70),  col="skyblue", lty=3)
-lines(c(0, 180),   c(70, 70), col="skyblue", lty=3)
+lines(c(170, 170), c(0, 34),  col="skyblue", lty=3, lwd=1.3)
+lines(c(0, 170),   c(34, 34), col="skyblue", lty=3, lwd=1.3)
+lines(c(180, 180), c(0, 70),  col="skyblue", lty=3, lwd=1.3)
+lines(c(0, 180),   c(70, 70), col="skyblue", lty=3, lwd=1.3)
 
 # Median
 text(177, 48,"Median", col="red")
@@ -281,8 +286,8 @@ axis(1, at = c(160, 170, 174.44, 180, 190, 200),
      labels = c("160", "170", "???", "180", "190", "200"))
 
 # Strahlensatz1
-lines(c(170, 174.44), c(10, 10), col="darkgreen", lty=4, lwd=1.7)
-lines(c(170, 180),    c(20, 20), col="darkgreen", lty=4, lwd=1.7)
+lines(c(170, 174.44), c(10, 10), col="green", lty=4, lwd=1.7)
+lines(c(170, 180),    c(20, 20), col="green", lty=4, lwd=1.7)
 # Strahlensatz2
 lines(c(162, 162), c(34, 50), col="darkorange", lty=4, lwd=1.7)
 lines(c(164, 164), c(34, 70), col="darkorange", lty=4, lwd=1.7)
@@ -315,7 +320,10 @@ Jetzt können wir unsere Werte einsetzen.
 
 
 $$
-\text{Median} = 170 + (180 - 170) \cdot \frac{50 - 34}{70 - 34} = \frac{4}{9} \approx 174,44
+\begin{aligned}
+\text{Median} &= 170 + (180 - 170) \cdot \frac{50 - 34}{70 - 34}\\
+ &= 170+ 10\cdot \frac{4}{9} \approx 174,44\\
+\end{aligned}
 $$
 
 ### Modus
@@ -1506,11 +1514,11 @@ par(cex.lab=1.2)
 out <- histbackback(split(data$height, data$sex), 
                     xlim=c(-10,10),
                     main = 'Histogram der Körpergröße nach Geschlecht', 
-                    xlab=c("Männer", "Frauen"), 
+                    xlab=c("Frauen", "Männer"), 
                     ylab="Körpergröße")
 abline(v= (-8:8)*2 , col ="gray" , lty =3) 
-barplot(-out$left, col="skyblue" , horiz=TRUE, space=0, add=TRUE, axes=FALSE) 
-barplot(out$right, col="salmon", horiz=TRUE, space=0, add=TRUE, axes=FALSE) 
+barplot(-out$left, col="salmon" , horiz=TRUE, space=0, add=TRUE, axes=FALSE) 
+barplot(out$right, col="skyblue", horiz=TRUE, space=0, add=TRUE, axes=FALSE) 
 
 ```
 
@@ -1533,7 +1541,7 @@ boxplot(height~sex,
         xlab="Geschlecht", 
         ylim=c(150,200), 
         labels=c("Männer","Frauen"), 
-        col=c("skyblue","salmon"), data=data)
+        col=c("salmon", "skyblue"), data=data)
 
 ```
 
