--- a/diskret.qmd
+++ b/diskret.qmd
@@ -1,7 +1,7 @@
 ---
 title: Diskrete Zufallsvariablen
 format:
-  html:
+  buechlein-html:
     include-in-header: 
       text: |
         <img src="https://vg08.met.vgwort.de/na/34d35430253740d6831474d73d022ff7" width="1" height="1" alt="">
