--- a/schaetzen.qmd
+++ b/schaetzen.qmd
@@ -1,7 +1,7 @@
 ---
 title: Schätzen der Populationsparameter
 format:
-  html:
+  buechlein-html:
     include-in-header: 
       text: |
         <img src="https://vg08.met.vgwort.de/na/fc0955c5d9af47bab0b7a96e0c8f0605" width="1" height="1" alt="">
