--- a/stichprobenstatistik.qmd
+++ b/stichprobenstatistik.qmd
@@ -1,7 +1,7 @@
 ---
 title: Stichprobenstatistik
 format:
-  html:
+  buechlein-html:
     include-in-header: 
       text: |
         <img src="https://vg08.met.vgwort.de/na/ddff99b0d50b4599871ba688d503781b" width="1" height="1" alt="">
