--- a/varianz.qmd
+++ b/varianz.qmd
@@ -1,7 +1,7 @@
 ---
 title: Varianzanalysen
 format:
-  html:
+  buechlein-html:
     include-in-header: 
       text: |
         <img src="https://vg08.met.vgwort.de/na/d11328778a744ba898dacf73c72bd84a" width="1" height="1" alt="">
